# bifrost-usd

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindInternalBifrost.cmake
src/: CMakeLists.txt
src/BifrostHydra/: CMakeLists.txt
src/BifrostHydra/BifrostHdEngine/: CMakeLists.txt  Container.cpp  Container.h  Engine.cpp  Engine.h  JobTranslationData.cpp  JobTranslationData.h  Parameters.cpp  Parameters.h  README.md  Requirement.cpp  Requirement.h  Runtime.cpp  Runtime.h  ValueTranslationData.cpp  ValueTranslationData.h
src/BifrostHydra/BifrostHdEngine/config/: CMakeLists.txt
src/BifrostHydra/BifrostHdEngine/translation/: CMakeLists.txt  TypeTranslation.cpp  TypeTranslation.h  export.h
src/BifrostHydra/BifrostHdGraph/: BifrostGraphGenerativeProcedural.cpp  BifrostGraphGenerativeProcedural.h  BifrostGraphGenerativeProceduralPlugin.cpp  BifrostGraphGenerativeProceduralPlugin.h  CMakeLists.txt  plugInfo.json.in
src/BifrostHydra/BifrostHdTranslators/: CMakeLists.txt  Geometry.cpp  Geometry.h  GeometryFn.cpp  GeometryFn.h  Instances.cpp  Instances.h  Mesh.cpp  Mesh.h  Strands.cpp  Strands.h
test/: usd_pack_test_config.json
test/BifrostHydra/: CMakeLists.txt  content_config.json  testHdSceneIndexBifrostGraphPrim.cpp  testHdSceneIndexQueries.cpp
test/BifrostHydra/resources/: create_snow_shadow_proc_001.usda
test/BifrostHydra/resources/compounds/: snow_shadow.json
test/BifrostHydra/testUtils/: CMakeLists.txt  RecordingSceneIndexObserver.cpp  RecordingSceneIndexObserver.h  TestSceneIndexPrim.cpp  TestSceneIndexPrim.h
